--- a/css/survey.css
+++ b/css/survey.css
@@ -183,10 +183,12 @@
 }
 
 .test_btn{
-	width:auto;
-	min-width:230px;
+	width:230px;
+	word-break: normal;
+	word-wrap: break-word;
+	white-space: normal;/*lx for fifth*/
 	border-radius: 10px;
-	margin:40px auto;
+	margin:55px auto;/*lx for second*/
 	display:block;
 	height:auto;
 }
