fix bug1 for test.html

--- a/css/base.css
+++ b/css/base.css
@@ -205,8 +205,8 @@ body{
 	width:100%;
 	height:auto;
 	color:#888;
-	font-size: 12px;
-	line-height: 16px;
+	font-size: 14px;/*lx for first*/
+	line-height: 18px;/*lx for first*/
 }
 
 
