--- a/css/index.css
+++ b/css/index.css
@@ -64,7 +64,7 @@
 	height:auto;
 	margin:0 auto;
 	line-height:20px;
-	font-size: 13px;
+	font-size: 15px;/*lx for first for index*/
 	text-align: center;
 	color:#333;
 }
