fix bug1 for category

--- a/css/base.css
+++ b/css/base.css
@@ -137,7 +137,7 @@ body{
 }
 
 .cash_fee{
-	font-size: 16px;/*lx for first for index*/
+	font-size: 16px;/*lx for first for index,category*/
 	color: #62C3D0;
 }
 
@@ -172,7 +172,7 @@ body{
 	height:20px;
 	line-height: 20px;
 	color: #353535;
-	font-size: 16px;/*lx for first for index*/
+	font-size: 16px;/*lx for first for index,category*/
 	margin:12px 0 4px 0;
 }
 
@@ -205,8 +205,8 @@ body{
 	width:100%;
 	height:auto;
 	color:#888;
-	font-size: 14px;/*lx for first for test and index*/
-	line-height: 18px;/*lx for first for test and index*/
+	font-size: 14px;/*lx for first for test,index,category*/
+	line-height: 18px;/*lx for first for test,index,category*/
 }
 
 .left_wrap{
