--- a/css/user.css
+++ b/css/user.css
@@ -26,7 +26,7 @@
 	margin:35px 0 0 0;
 	float:left;
 	color:#fff;
-	font-size: 13px;
+	font-size: 15px;/*lx for first for user.index*/
 }
 
 .user_name span{
@@ -37,7 +37,7 @@
 .mui-segmented-control{
 	border:none;
 	background: #fbfbfb;
-	font-size: 12px;
+	font-size: 14px;/*lx for first for user.index*/
 	border-bottom:2px solid #efefef;
 }
 
@@ -61,6 +61,7 @@
 	/*padding:5px 10px;*/
 	display: block;
 	margin:33px 0 0 0;
+	font-size: 16px;/*lx for first for user.index*/
 }
 
 @media screen and (min-width: 800px){
@@ -91,7 +92,7 @@
 		margin:80px 0 0 0;
 		float:left;
 		color:#fff;
-		font-size: 22px;
+		font-size: 24px;/*lx for first for user.index*/
 	}
 	
 	.user_name span{
