--- a/css/login.css
+++ b/css/login.css
@@ -87,13 +87,13 @@ header h2{
 }
 .jl_login_btn{
 	width:92%;
-	height:45px;
-	background:#62c3d0;
+	height:47px;
+	background:#62c3d0;/*lx for bug1 for login*/
 	margin:30px auto 0;
 	border-radius:5px;
-	line-height:45px;
+	line-height:47px;/*lx for bug1 for login*/
 	text-align:center;
-	font-size:17px;
+	font-size:19px;/*lx for bug1 for login*/
 	color:#fff;
 	}
 .jl_btn_box{
@@ -202,7 +202,7 @@ header h2{
 	border:none;
 	background:none;
 	float:left;
-	font-size:15px;
+	font-size:17px;/*lx for bug1 for login*/
 	}
 	
 .code_box span{
@@ -214,7 +214,7 @@ header h2{
 	margin:10px 0 0 0;
 	border-left:1px solid #62c3d0;
 	color:#62c3d0;
-	font-size:15px;
+	font-size:17px;/*lx for bug1 for login*/
 	}
 	
 .jl_nocode_ts{
@@ -669,12 +669,12 @@ header h2{
 	
 .jl_replase_act_title{
 	width:91%;
-	height:40px;
+	height:42px;/*lx for bug1 for login*/
 	margin:0 0 0 4%;
-	line-height:40px;
+	line-height:42px;
 	color:#333;
-	font-size:14px;
-	}
+	font-size:16px;/*lx for bug1 for login*/
+}
 .jl_replase_team{
 	float:left;	
 	line-height:40px;
@@ -1824,7 +1824,7 @@ header h2{
 	height:100%;
 	border:none;
 	background:none;
-	font-size:15px;
+	font-size:17px;/*lx for bug1 for login*/
 	}
 	
 .phone_box{
